--- a/templates/index.html
+++ b/templates/index.html
@@ -3,28 +3,32 @@
     <head>
         <title>Kcal tracker</title>
         <link rel="stylesheet" href="/style/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="/submit" method="POST">
-            <div>
-                <label for="food">Food:</label>
-                <input type="text" id="food" name="food" required />
-            </div>
-            <div>
-                <label for="total_kcal">Total kcal:</label>
-                <input type="number" id="total_kcal" name="total_kcal" />
-            </div>
-            <div>
-                <label for="kcal">kcal per 100g:</label>
-                <input type="number" id="kcal" name="kcal" />
-            </div>
-            <div>
-                <label for="weight">Weight:</label>
-                <input type="number" id="weight" name="weight"/>
-            </div>
-            <div>
-                <button type="submit">Submit</button>
-            </div>
-        </form>
+        <div class="container">
+            <h1>Kcal Tracker</h1>
+            <form action="/submit" method="POST">
+                <div class="form-group">
+                    <label for="food">Food:</label>
+                    <input type="text" id="food" name="food" required />
+                </div>
+                <div class="form-group">
+                    <label for="total_kcal">Total kcal:</label>
+                    <input type="number" id="total_kcal" name="total_kcal" />
+                </div>
+                <div class="form-group">
+                    <label for="kcal">kcal per 100g:</label>
+                    <input type="number" id="kcal" name="kcal" />
+                </div>
+                <div class="form-group">
+                    <label for="weight">Weight:</label>
+                    <input type="number" id="weight" name="weight"/>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
