--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Kcal tracker</title>
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
